--- a/applications/basic/Makefile
+++ b/applications/basic/Makefile
@@ -40,6 +40,9 @@ prelim:
 	$(PYTHON) scripts$(S)tokens.py
 	$(PYTHON) $(SCRIPTDIR)makebuild.py >include.files
 
+doc:
+	python scripts$(S)makedoc.py > $(BINDIR)..$(S)documents$(S)basic.html
+
 run: emulator assemble test
 	$(EMULATOR) $(BINDIR)osrom.bin@$(MOSLOAD) build$(S)basic.bin@$(BASICLOAD) build$(S)program.bin@$(BASICCODE)
 	
