--- a/applications/mathslib/Makefile
+++ b/applications/mathslib/Makefile
@@ -21,7 +21,7 @@ assemble:
 	$(CCOPY) $(BINDIR)ramdata.inc build
 	$(PYTHON) scripts$(S)tenstable.py >src$(S)generated$(S)_tens.asm
 	$(PYTHON) scripts$(S)tsc.py <test.tsc >build$(S)_test.asm
-	$(PYTHON) scripts$(S)makelib.py >build$(S)libmathslib.asmlib
+	$(PYTHON) $(SCRIPTDIR)makelib.py >build$(S)libmathslib.asmlib
 	$(CCOPY) build$(S)libmathslib.asmlib $(BINDIR)
 	$(ASM) _main.asm -o build$(S)main.bin
 
