--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -18,7 +18,7 @@ endif
 APPNAME = neo$(APPSTEM)
 
 SOURCES = 	src$(S)core$(S)sys_processor.o  framework$(S)main.o framework$(S)gfx.o framework$(S)debugger.o \
-			src$(S)core$(S)sys_debugger.o src$(S)core$(S)hardware.o 
+			src$(S)core$(S)sys_debugger.o src$(S)core$(S)hardware.o src$(S)core$(S)flash.o 
   
 CC = g++
 
