--- a/applications/fslib/Makefile
+++ b/applications/fslib/Makefile
@@ -15,15 +15,11 @@ else
 include ../../documents/common.make
 endif
 
-all: testfs
+all: assemble testfs
 
-#assemble:
-#	$(CCOPY) $(BINDIR)ramdata.inc build
-#	$(PYTHON) scripts$(S)tenstable.py >src$(S)generated$(S)_tens.asm
-#	$(PYTHON) scripts$(S)tsc.py <test.tsc >build$(S)_test.asm
-#	$(PYTHON) scripts$(S)makelib.py >build$(S)libmathslib.asmlib
-#	$(CCOPY) build$(S)libmathslib.asmlib $(BINDIR)
-#	$(ASM) _main.asm -o build$(S)main.bin
+assemble:
+	$(PYTHON) $(SCRIPTDIR)makelib.py >build$(S)libwwfslib.asmlib
+	$(CCOPY) build$(S)libwwfslib.asmlib $(BINDIR)
 
 testfs:
 	cd python ; $(PYTHON) makedemo.py			
