--- a/applications/mos/Makefile
+++ b/applications/mos/Makefile
@@ -22,6 +22,7 @@ assemble:
 	$(PYTHON) $(SCRIPTDIR)makebuild.py >include.files
 	$(PYTHON) $(SCRIPTDIR)timestamp.py >src$(S)generated$(S)time.incx
 	$(PYTHON) scripts$(S)vectors.py >$(BINDIR)osvectors.inc
+	$(CCOPY) $(BINDIR)libwwfslib.asmlib build
 	$(ASM) osrom.asm -o build$(S)osrom.bin
 	$(CCOPY) build$(S)osrom.bin $(BINDIR)
 	$(CCOPY) ramdata.inc $(BINDIR)
