--- a/applications/fslib/Makefile
+++ b/applications/fslib/Makefile
@@ -17,10 +17,18 @@ endif
 
 all: assemble testfs
 
+SOURCES = python$(S)files$(S)text1.bas python$(S)files$(S)text2.bas python$(S)files$(S)text3.bas
+
+
 assemble:
 	$(PYTHON) $(SCRIPTDIR)makelib.py >build$(S)libwwfslib.asmlib
 	$(CCOPY) build$(S)libwwfslib.asmlib $(BINDIR)
 
-testfs:
+%.bas:%.txt
+	$(PYTHON) $(BINDIR)makepgm.zip $<
+	$(CCOPY) a.out $@
+	$(CDEL) a.out
+
+testfs: $(SOURCES)
 	cd python ; $(PYTHON) makedemo.py			
 	$(CCOPY) python$(S)flash.image ..$(S)basic$(S)storage
