--- a/applications/basic/Makefile
+++ b/applications/basic/Makefile
@@ -35,8 +35,8 @@ prelim:
 	make -C scripts
 	$(PYTHON) scripts$(S)errors.py en
 	$(PYTHON) scripts$(S)assembler.py >src/generated/asmhash.asm
-	$(CCOPY) $(BINDIR)ramdata.inc build
 	$(CCOPY) $(BINDIR)osvectors.inc build
+	$(CCOPY) $(BINDIR)zramdata.inc build
 	$(CCOPY) $(BINDIR)libmathslib.asmlib build
 	$(PYTHON) scripts$(S)tokens.py
 	$(PYTHON) $(SCRIPTDIR)makebuild.py >include.files
