--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -18,8 +18,9 @@ endif
 APPNAME = neo$(APPSTEM)
 
 SOURCES = 	src$(S)core$(S)sys_processor.o  framework$(S)main.o framework$(S)gfx.o framework$(S)debugger.o \
-			src$(S)core$(S)sys_debugger.o src$(S)core$(S)hardware.o src$(S)core$(S)flash.o 
-  
+			src$(S)core$(S)sys_debugger.o src$(S)core$(S)hardware.o src$(S)core$(S)flash.o  \
+  			src$(S)modes$(S)mode0.o
+  			
 CC = g++
 
 .PHONY: all clean emulator prebuild release run
