--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -19,7 +19,7 @@ APPNAME = neo$(APPSTEM)
 
 SOURCES = 	src$(S)core$(S)sys_processor.o  framework$(S)main.o framework$(S)gfx.o framework$(S)debugger.o \
 			src$(S)core$(S)sys_debugger.o src$(S)core$(S)hardware.o src$(S)core$(S)flash.o  \
-  			src$(S)modes$(S)mode0.o
+  			src$(S)modes$(S)modes.o src$(S)modes$(S)mode0.o src$(S)modes$(S)mode3.o
   			
 CC = g++
 
